feat: add endpoint to retrieve attachment details
