# src/main/java/org/onecx/document/management/rs/v1/controllers/AttachmentController.java
@@ -1,0 +1,38 @@
+package org.onecx.document.management.rs.v1.controllers;
+
+import gen.org.onecx.document.management.rs.v1.AttachmentControllerV1Api;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
+import jakarta.ws.rs.core.Response;
+import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
+import org.onecx.document.management.rs.v1.exception.RestException;
+import org.onecx.document.management.rs.v1.mappers.DocumentMapper;
+import org.onecx.document.management.rs.v1.services.AttachmentService;
+
+@ApplicationScoped
+public class AttachmentController implements AttachmentControllerV1Api {
+
+    @Inject
+    AttachmentService attachmentService;
+
+    @Inject
+    DocumentMapper mapper;
+
+    @Override
+    public Response getAttachmentDetails(String attachmentId) {
+        final var attachment = attachmentService.getAttachmentDetails(attachmentId);
+        return Response.ok(mapper.mapAttachment(attachment)).build();
+    }
+
+    @ServerExceptionMapper
+    public Response handleRestException(RestException exception) {
+        if (exception.getErrorCode().equals(Response.Status.NOT_FOUND)) {
+            return Response
+                    .status(Response.Status.NOT_FOUND)
+                    .build();
+        }
+        return Response
+                .status(Response.Status.INTERNAL_SERVER_ERROR)
+                .build();
+    }
+}
